# Quan_Ly_Ki_Tuc_Xa

./: README.md
backend/: .dockerignore  .env  .gitignore  check.py  dockerfile  pyproject.toml  requirements.txt
backend/ai/api/: chatbot.py
backend/ai/config/: config.py
backend/ai/data_loader/: __init__.py  data_loader.py
backend/ai/llm/: models.py
backend/ai/orchestrator/: tool_selector.py
backend/ai/ragg/data/data_txt/QuyDinh/: quydinh.txt
backend/ai/ragg/data/vectorstore/CCCD/: index.pkl
backend/ai/ragg/data/vectorstore/QuyDinh/: index.faiss  index.pkl
backend/ai/retriever/: retriever.py
backend/ai/tool/: QuyDinh.py
backend/api/: app.py  auth.py  invoice.py  reservation.py  reservation_contact.py  room.py  student.py
backend/core/: config.py
backend/database/: init_db.py
backend/helpers/: contract_status.py  gender_enum.py  invoice_status.py  pwd.py  reservation_status.py  user_role.py
backend/models/: account.py  base.py  contract.py  invoice.py  reservation.py  room.py  students.py
backend/schemas/: account.py  contract.py  reservation.py  room.py  student.py  token.py
backend/services/: auth.py
